# trials-llm

./: .gitignore  Makefile  README.md  Recording.md
llm_refinement/: pyproject.toml
llm_refinement/conf/: config.py  config.yaml
llm_refinement/configurations/: config.py
llm_refinement/data/interim/: random_t_annotation_500_42.json
llm_refinement/data/prompts/: chain_interim.json
llm_refinement/data/raw/: random_trials_ids_500_42.json
llm_refinement/data/results/: eval_gpt-3.5-turbo_0shot.json  eval_gpt-3.5-turbo_1shot.json  eval_gpt-3.5-turbo_2shot.json  eval_gpt-3.5-turbo_3CP.json  eval_gpt-3.5-turbo_3CoP.json  eval_gpt-4_0shot.json  eval_gpt-4_2CoP.json  gpt_3.5_turbo_2CoP.json  gpt_3.5_turbo_3CoP.json
llm_refinement/modules/: biomarker_handler.py  chromadb_handler.py  gpt_handler.py
llm_refinement/notebooks/: GoldenDataset_EDA.ipynb
llm_refinement/scripts/: aacr_analysis.py  chain_of_prompt_evaluation.py  chain_of_prompt_predict.py  create_train_collection.py  dpo_file_train.py  fine-tune_mistral.py  generate_datasets.py  generate_negatives.py  gpt_prediction.py  manual_generation.py  merge_test_stratified.py  plot_f2_scores.py  plot_patient_cancer_distribution.py  plot_token_distribution.py  process_civic_data.py  random_generation.py  single_prompt_evaluation.py  stratified_biomarker_sampler.py  test_hermes.py
llm_refinement/scripts/dataset_generation/: create_jsonL.py  generate_negatives.py  random_generation.py  simulated_data_gpt4.py  split_train_test.py  stratified_biomarker_sampler.py
llm_refinement/utils/: evaluation.py  jsons.py
(+1 files in other folders)
