[tool.poetry]
name = "llm_refinement"
version = "0.1.0"
description = "Package for LLM refinement (prompt engineering & fine-tuning) to predict biomarkers from unstructured clinical trials data."
authors = [
  "Nour Alkhoury <nouralkhoury01@gmail.com>",
]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.3"
loguru = "^0.7.0"
pandas = "^1.3.0"
jupyter = "^1.0.0"
ipykernel = "^5.3.4"
openai = "^1.2.3" 
langchain = "0.0.335"
chromadb = "0.3.25"
scikit-learn = "^1.3.2"
fuzzywuzzy = "0.18.0"
ncbi-datasets-pylib = "15.34.0"
tiktoken = "0.5.2"
matplotlib = "3.8.2"